# CityLight

./: .gitattributes  .zshrc  Dockerfile  README.md  Readme.md
TSC-example/: main.py  requirements.txt
TSC-example/data/: readme.md
TSC-example/ppo/: .uuid  buffer.py  config.py  ppo.py  util.py
TSC-example/ppo/__pycache__/: .uuid
TSC-example/ppo/algorithm/: .uuid  Policy.py  actor_critic.py
TSC-example/ppo/algorithm/__pycache__/: .uuid
TSC-example/ppo/utils/: .uuid  act.py  invariant.py  mlp.py  vit.py
TSC-example/ppo/utils/__pycache__/: .uuid
cuda/: .gitignore  .gitmodules  README.md  code.ipynb  export_agents.py  export_roads.py  requirements.txt
cuda/api/: demo.py  demo_config.yml  gen.sh  main.py
cuda/protos/wolong/routing/v2/: routing.proto
cuda/python_wrapper/: .gitignore  setup.py
cuda/python_wrapper/src/simulet/: __init__.py  convert.py  engine.py  go_router.py  map.py  tl.py
cuda/src/: CMakeLists.txt  main.cu  protos.h  python_api.cu  simulet.cu  simulet.cuh
cuda/src/entity/aoi/: aoi.cu
cuda/src/entity/junction/: junction.cu  junction.cuh
cuda/src/entity/lane/: lane.cu
cuda/src/entity/person/: person.cu  person.cuh  vehicle.cu
cuda/src/entity/road/: road.cu
cuda/src/rpc/: routing.cu  routing.cuh
cuda/src/wolong/: CMakeLists.txt
tools/: copy_mongo.py  create-cuda-project.py  create_project.sh  init_conan.sh  replace-string.py  run_etcd.sh
tools/cuda-project-template/: .gitignore  CMakeLists.txt
tools/cuda-project-template/scripts/: compile.sh
tools/cuda-project-template/src/: CMakeLists.txt  README.md  main.cu
(+18 files in other folders)
